force-app/main/default/objects/CTI_Rules__c/CTI_Rules__c.object-meta.xml
<CustomObject>
    <description>Configuración de las reglas de asignación y obtención de prioridades para el envio a CTI.</description>
    <label>Regla CTI</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número de Regla CTI</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reglas CTI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>