force-app/main/default/objects/CTI_Rules__c/fields/active__c.field-meta.xml
<CustomField>
    <fullName>active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica si la regla está activa o no.</description>
    <label>Activa</label>
    <type>Checkbox</type>
</CustomField>