force-app/main/default/objects/CTI_Rules__c/fields/campaign__c.field-meta.xml
<CustomField>
    <fullName>campaign__c</fullName>
    <label>Campaña</label>
    <length>80</length>
    <type>Text</type>
</CustomField>