force-app/main/default/objects/CTI_Rules__c/fields/campaign_cess__c.field-meta.xml
<CustomField>
    <fullName>campaign_cess__c</fullName>
    <label>Campaña - CESS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>campaña_general</fullName>
            </value>
            <value>
                <fullName>campaña_autos</fullName>
            </value>
            <value>
                <fullName>campaña_ hogar</fullName>
            </value>
            <value>
                <fullName>campaña_salud</fullName>
            </value>
            <value>
                <fullName>campaña_vida</fullName>
            </value>
            <value>
                <fullName>campaña_accidentes</fullName>
            </value>
            <value>
                <fullName>campaña_decesos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>