force-app/main/default/objects/CTI_Rules__c/fields/campaign_cti__c.field-meta.xml
<CustomField>
    <fullName>campaign_cti__c</fullName>
    <label>Campaña CTI</label>
    <length>40</length>
    <type>Text</type>
</CustomField>