force-app/main/default/objects/CTI_Rules__c/fields/IdExterno__c.field-meta.xml
<CustomField>
    <fullName>IdExterno__c</fullName>
    <description>Identificador 18 de Salesforce de la anterior instancia. Se utiliza solo para la carga inicial de registros.</description>
    <externalId>true</externalId>
    <label>Id. externo</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>