force-app/main/default/objects/CTI_Rules__c/fields/line_insurance__c.field-meta.xml
<CustomField>
    <fullName>line_insurance__c</fullName>
    <label>Ramo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>line_insurance</valueSetName>
    </valueSet>
</CustomField>