force-app/main/default/objects/CTI_Rules__c/fields/skill__c.field-meta.xml
<CustomField>
    <fullName>skill__c</fullName>
    <label>Skill</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>