force-app/main/default/objects/CTI_Rules__c/fields/source_cess__c.field-meta.xml
<CustomField>
    <fullName>source_cess__c</fullName>
    <label>Origen - CESS</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>