force-app/main/default/objects/CTI_Rules__c/fields/source_type__c.field-meta.xml
<CustomField>
    <fullName>source_type__c</fullName>
    <label>Medio</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CESS_Lead_Medios</valueSetName>
    </valueSet>
</CustomField>