force-app/main/default/objects/CTI_Rules__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>campaign_cti__c</columns>
    <columns>source_type__c</columns>
    <columns>campaign__c</columns>
    <columns>source_cess__c</columns>
    <columns>campaign_cess__c</columns>
    <columns>order__c</columns>
    <columns>skill__c</columns>
    <columns>line_insurance__c</columns>
    <columns>active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>